--- a/styles/likely.styl
+++ b/styles/likely.styl
@@ -1,117 +1,117 @@
 .likely,
 .likely__widget {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  text-indent: 0 !important;
-  list-style: none !important;
-  font-weight: normal;
-  font-family: Helvetica Neue, Arial, sans-serif;
-  font-size: inherit;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	text-indent: 0 !important;
+	list-style: none !important;
+	font-weight: normal;
+	font-family: Helvetica Neue, Arial, sans-serif;
+	font-size: inherit;
 }
 
 // Hide buttons until they are loaded
 .likely {
-  opacity: 0;
-  font-size: 0 !important;
+	opacity: 0;
+	font-size: 0 !important;
 }
-.likely_visible {
-  opacity: 1;
-  transition: opacity .1s ease-in;
+.likely--visible {
+	opacity: 1;
+	transition: opacity .1s ease-in;
 }
 .likely > * {
-  display: inline-block;
-  visibility: hidden;
+	display: inline-block;
+	visibility: hidden;
 }
-.likely_visible > * {
-  visibility: inherit;
+.likely--visible > * {
+	visibility: inherit;
 }
 
 .likely {
-  // outline: 1px #f00 solid;
-  &__widget {
-    display: inline-block;
-    position: relative;
-    white-space: nowrap;
-  }
+	// outline: 1px #f00 solid;
+	&__widget {
+		display: inline-block;
+		position: relative;
+		white-space: nowrap;
+	}
 
-  &__button,
-  &__counter {
-    text-decoration: none;
-    text-rendering: optimizeLegibility;
-    display: inline-block;
-    margin: 0;
-    outline: 0;
-  }
+	&__button,
+	&__counter {
+		text-decoration: none;
+		text-rendering: optimizeLegibility;
+		display: inline-block;
+		margin: 0;
+		outline: 0;
+	}
 
-  &__button {
-    position: relative;
-    cursor: pointer;
-    user-select: none;
-  }
+	&__button {
+		position: relative;
+		cursor: pointer;
+		user-select: none;
+	}
 
-  &__counter {
-    display: none;
-    position: relative;
-    font-weight: normal;
-  }
+	&__counter {
+		display: none;
+		position: relative;
+		font-weight: normal;
+	}
 
-  &_ready &__counter {
-    display: inline-block;
-  }
+	&--ready &__counter {
+		display: inline-block;
+	}
 
-  &_ready &__counter_empty {
-    display: none;
-  }
+	&--ready &__counter--empty {
+		display: none;
+	}
 
-  &__widget,
-  &__icon,
-  &__button,
-  &__counter {
-    vertical-align: top;
-  }
+	&__widget,
+	&__icon,
+	&__button,
+	&__counter {
+		vertical-align: top;
+	}
 
-  &__widget {
+	&__widget {
 
-    transition: widget-transition = background .33s ease-out, color .33s ease-out, fill .33s ease-out;
+		transition: widget-transition = background .33s ease-out, color .33s ease-out, fill .33s ease-out;
 
-    &:hover, &:active, &:focus {
-      transition: none;
-      cursor: pointer;
+		&:hover, &:active, &:focus {
+			transition: none;
+			cursor: pointer;
 
-      @media (hover: none) {
-        transition: widget-transition;
-        cursor: unset;
-      }
-    }
+			@media (hover: none) {
+				transition: widget-transition;
+				cursor: unset;
+			}
+		}
 
-  }
+	}
 
-  &__icon {
-    position: relative;
-    text-align: left;
-    display: inline-block;
-  }
+	&__icon {
+		position: relative;
+		text-align: left;
+		display: inline-block;
+	}
 
-  svg {
-    position: absolute;
-  }
+	svg {
+		position: absolute;
+	}
 
-  &__button,
-  &__counter {
-    line-height: inherit;
-    cursor: inherit;
-  }
+	&__button,
+	&__counter {
+		line-height: inherit;
+		cursor: inherit;
+	}
 
-  &__button:empty {
-    display: none;
-  }
+	&__button:empty {
+		display: none;
+	}
 
-  &__counter {
-    text-align: center;
-  }
+	&__counter {
+		text-align: center;
+	}
 
 }
 
@@ -121,52 +121,52 @@ likely-light-background = rgba(236,236,236,.16);
 likely-light-box-shadow = rgba(0,0,0,.2) 0 0 .33em;
 
 .likely {
-  .likely__widget {
-    color: #000;
-    background: likely-background;
-  }
-  .likely__counter {
-    background-size: 1px 1px;
-    background-repeat: repeat-y;
-    background-image: linear-gradient(to right, rgba(0,0,0,.2) 0, rgba(0,0,0,0) .5px, rgba(0,0,0,0) 100%)
-  }
+	.likely__widget {
+		color: #000;
+		background: likely-background;
+	}
+	.likely__counter {
+		background-size: 1px 1px;
+		background-repeat: repeat-y;
+		background-image: linear-gradient(to right, rgba(0,0,0,.2) 0, rgba(0,0,0,0) .5px, rgba(0,0,0,0) 100%)
+	}
 }
 .likely-light {
-  .likely__widget {
-    color: #fff;
-    fill: #fff;
-    background: likely-light-background;
-    text-shadow: likely-light-box-shadow;
-  }
-  .likely__counter {
-    background-image: linear-gradient(to right, rgba(255,255,255,.4) 0, rgba(255,255,255,0) .5px, rgba(255,255,255,0) 100%)
-  }
+	.likely__widget {
+		color: #fff;
+		fill: #fff;
+		background: likely-light-background;
+		text-shadow: likely-light-box-shadow;
+	}
+	.likely__counter {
+		background-image: linear-gradient(to right, rgba(255,255,255,.4) 0, rgba(255,255,255,0) .5px, rgba(255,255,255,0) 100%)
+	}
 }
 
 colorize(button, color) {
-  .likely__widget_{button} {
-    fill: color;
-    &:hover, &:active, &:focus {
-      background: alpha(mix(#fff,color,75%),.8);
+	.likely__widget--{button} {
+		fill: color;
+		&:hover, &:active, &:focus {
+			background: alpha(mix(#fff,color,75%),.8);
 
-      @media (hover: none) {
-        background: likely-background;
-      }
-    }
-  }
-  .likely-light {
-    .likely__widget_{button} {
-      &:hover, &:active, &:focus {
-        text-shadow: color 0 0 .25em;
-        background: alpha(color,0.7);
+			@media (hover: none) {
+				background: likely-background;
+			}
+		}
+	}
+	.likely-light {
+		.likely__widget--{button} {
+			&:hover, &:active, &:focus {
+				text-shadow: color 0 0 .25em;
+				background: alpha(color,0.7);
 
-        @media (hover: none) {
-          text-shadow: likely-light-box-shadow;
-          background: likely-light-background;
-        }
-      }
-    }
-  }
+				@media (hover: none) {
+					text-shadow: likely-light-box-shadow;
+					background: likely-light-background;
+				}
+			}
+		}
+	}
 }
 
 colorize('facebook',      rgb(66,84,151)); // #425497
@@ -183,79 +183,79 @@ colorize('telegram',      #34abde);
 /* Size options */
 
 .likely {
-  margin: 0 -5px -10px;
-  .likely__widget {
-    line-height: 20px;
-    font-size: 14px;
-    border-radius: 3px;
-    height: 22px;
-    margin: 0 5px 10px;
-  }
-  .likely__icon {
-    width: 22px; height: 22px;
-  }
-  .likely__button {
-    padding: 1px 4px 1px 0;
-  }
-  .likely__counter {
-    padding: 1px 4px;
-  }
-  svg {
-    left: 3px;
-    top: 3px;
-    width: 16px;
-    height: 16px;
-  }
+	margin: 0 -5px -10px;
+	.likely__widget {
+		line-height: 20px;
+		font-size: 14px;
+		border-radius: 3px;
+		height: 22px;
+		margin: 0 5px 10px;
+	}
+	.likely__icon {
+		width: 22px; height: 22px;
+	}
+	.likely__button {
+		padding: 1px 4px 1px 0;
+	}
+	.likely__counter {
+		padding: 1px 4px;
+	}
+	svg {
+		left: 3px;
+		top: 3px;
+		width: 16px;
+		height: 16px;
+	}
 }
 
 .likely-big {
-  margin: 0 -6px -12px;
-  .likely__widget {
-    line-height: 28px;
-    font-size: 18px;
-    border-radius: 4px;
-    height: 32px;
-    margin: 0 6px 12px;
-  }
-  .likely__icon {
-    width: 32px; height: 32px;
-  }
-  .likely__button {
-    padding: 2px 6px 2px 0;
-  }
-  .likely__counter {
-    padding: 2px 6px;
-  }
-  svg {
-    left: 4px;
-    top: 4px;
-    width: 24px;
-    height: 24px;
-  }
+	margin: 0 -6px -12px;
+	.likely__widget {
+		line-height: 28px;
+		font-size: 18px;
+		border-radius: 4px;
+		height: 32px;
+		margin: 0 6px 12px;
+	}
+	.likely__icon {
+		width: 32px; height: 32px;
+	}
+	.likely__button {
+		padding: 2px 6px 2px 0;
+	}
+	.likely__counter {
+		padding: 2px 6px;
+	}
+	svg {
+		left: 4px;
+		top: 4px;
+		width: 24px;
+		height: 24px;
+	}
 }
 
 .likely-small {
-  margin: 0 -4px -8px;
-  .likely__widget {
-    line-height: 14px;
-    font-size: 12px;
-    border-radius: 2px;
-    height: 18px;
-    margin: 0 4px 8px;
-  }
-  .likely__icon {
-    width: 18px; height: 18px;
-  }
-  .likely__button {
-    padding: 2px 3px 2px 0;
-  }
-  .likely__counter {
-    padding: 2px 3px;
-  }
-  svg {
-    left: 3px;
-    top: 3px;
-    width: 12px;
-    height: 12px;
-  }
+	margin: 0 -4px -8px;
+	.likely__widget {
+		line-height: 14px;
+		font-size: 12px;
+		border-radius: 2px;
+		height: 18px;
+		margin: 0 4px 8px;
+	}
+	.likely__icon {
+		width: 18px; height: 18px;
+	}
+	.likely__button {
+		padding: 2px 3px 2px 0;
+	}
+	.likely__counter {
+		padding: 2px 3px;
+	}
+	svg {
+		left: 3px;
+		top: 3px;
+		width: 12px;
+		height: 12px;
+	}
 }
